RESOLVED FIXED306418
[WebXR][HitTest] Incorrect hit test poses when not using fixed reference spaces
https://bugs.webkit.org/show_bug.cgi?id=306418
Summary [WebXR][HitTest] Incorrect hit test poses when not using fixed reference spaces
Sergio Villar Senin
Reported 2026-01-28 02:06:56 PST
The current implementation is not correct because the native origin of the spaces used to locate hit tests is not always known at input source creation time since it might vary between frames, for example if it's the viewer space (which moves with the head movement)
Attachments
Sergio Villar Senin
Comment 1 2026-01-28 02:20:55 PST
Radar WebKit Bug Importer
Comment 2 2026-02-04 02:07:12 PST
EWS
Comment 3 2026-02-06 05:39:22 PST
Committed 306939@main (75e1aa48969b): <https://commits.webkit.org/306939@main> Reviewed commits have been landed. Closing PR #57400 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.